tests/golden/type_errors/array_filter_callback_return.cd
fun isPositive(value: number): number {
  return value;
}
filter([1], isPositive);
