tests/golden/type_errors/array_filter_callback_return.err
Type error at 4:23: filter expects callback to return bool, got number
  filter([1], isPositive);
                        ^
